--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -42,7 +42,7 @@
         <span data-i18n="operatedBy">(operated by)</span> <strong>Ecureye</strong>
         <span class="pill" style="margin-left:10px;">
           <span data-i18n="effectiveDateLabel">Effective Date:</span>
-          <span id="effectiveDate">[Insert date]</span>
+          <span id="effectiveDate">[December 15 2025]</span>
         </span>
       </p>
 
@@ -207,7 +207,6 @@
           <li><strong>Email:</strong> <a href="mailto:[info@duemate.ecureye.com]">[info@duemate.ecureye.com]</a></li>
           <li><strong>Website:</strong> <a href="[https://duemate.ecureye.com]">[https://duemate.ecureye.com]</a></li>
         </ul>
-        <p class="footer">Tip: Replace bracketed placeholders before publishing.</p>
       </section>
     </div>
 
