Added DueMate app privacy policy - 3

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -42,7 +42,7 @@
         <span data-i18n="operatedBy">(operated by)</span> <strong>Ecureye</strong>
         <span class="pill" style="margin-left:10px;">
           <span data-i18n="effectiveDateLabel">Effective Date:</span>
-          <span id="effectiveDate">[December 15 2025]</span>
+          <span id="effectiveDate">December 15 2025</span>
         </span>
       </p>
 
