--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
       --ring: rgba(79,163,220,.35);
       --radius: 18px;
 
+      --chip-bg: rgba(31,59,115,.08);
+      --chip-hover: rgba(31,59,115,.12);
+      --chip-color: var(--primary);
+      --btn-bg: rgba(255,255,255,.92);
+      --btn-hover: rgba(31,59,115,.08);
+      --control-bg: rgba(255,255,255,.9);
+      --control-color: var(--primary);
+      --card-bg:#FFFFFF;
+      --card-border: rgba(31,59,115,.10);
+      --metric-bg:#FFFFFF;
+      --callout-bg: rgba(79,163,220,.08);
+      --callout-border: rgba(79,163,220,.4);
+      --check-bg: rgba(79,163,220,.15);
+      --check-color: var(--primary);
+      --hero-border: rgba(31,59,115,.10);
+      --hero-bg: linear-gradient(135deg, rgba(255,255,255,.95), rgba(239,244,255,.85));
+      --hero-overlay1: rgba(79,163,220,.20);
+      --hero-overlay2: rgba(31,59,115,.18);
+
       --g1: radial-gradient(1100px 500px at 10% -20%, rgba(79,163,220,.15), transparent 55%),
             radial-gradient(900px 420px at 90% 10%, rgba(31,59,115,.18), transparent 60%),
             linear-gradient(140deg, rgba(255,255,255,.0), rgba(255,255,255,.14));
@@ -39,6 +58,25 @@
         --border:rgba(148,163,184,.18);
         --shadow: 0 18px 60px rgba(0,0,0,.45);
         --glass: linear-gradient(135deg, rgba(7,11,20,.9), rgba(15,23,42,.8));
+        --link: var(--secondary);
+        --chip-bg: rgba(255,255,255,.06);
+        --chip-hover: rgba(255,255,255,.12);
+        --chip-color: var(--text);
+        --btn-bg: rgba(8,14,30,.92);
+        --btn-hover: rgba(79,163,220,.22);
+        --control-bg: rgba(11,18,35,.9);
+        --control-color: var(--text);
+        --card-bg:#0F172A;
+        --card-border: rgba(79,163,220,.2);
+        --metric-bg:#0C1326;
+        --callout-bg: rgba(79,163,220,.18);
+        --callout-border: rgba(79,163,220,.5);
+        --check-bg: rgba(79,163,220,.3);
+        --check-color: #EAF2FF;
+        --hero-border: rgba(79,163,220,.35);
+        --hero-bg: linear-gradient(135deg, rgba(4,7,16,.95), rgba(9,14,30,.92));
+        --hero-overlay1: rgba(79,163,220,.32);
+        --hero-overlay2: rgba(31,59,115,.45);
         --g1: radial-gradient(1200px 500px at 20% -10%, rgba(79,163,220,.30), transparent 60%),
               radial-gradient(1200px 500px at 80% 0%, rgba(31,59,115,.30), transparent 55%);
       }
@@ -106,13 +144,13 @@
       padding: 9px 14px;
       border-radius: 999px;
       border: 1px solid transparent;
-      background: rgba(31,59,115,.08);
-      color: var(--primary);
+      background: var(--chip-bg);
+      color: var(--chip-color);
       font-size: 13px;
       white-space: nowrap;
       font-weight: 600;
     }
-    .chip:hover{ background: rgba(31,59,115,.12); text-decoration:none; }
+    .chip:hover{ background: var(--chip-hover); text-decoration:none; }
     .chip:focus{ outline:none; box-shadow: 0 0 0 4px var(--ring); }
 
     .nav-actions{ display:flex; align-items:center; gap:14px; flex-wrap:wrap; justify-content:flex-end; }
@@ -121,16 +159,16 @@
     }
     label{ color: var(--muted); font-size: 13px; font-weight: 600; }
     select{
-      background: rgba(255,255,255,.9);
+      background: var(--control-bg);
       border:1px solid var(--border);
-      color: var(--primary);
+      color: var(--control-color);
       padding: 8px 34px 8px 14px;
       border-radius: 999px;
       font-size: 13px;
       appearance:none;
       font-weight:600;
-      background-image: linear-gradient(45deg, transparent 50%, var(--primary) 50%),
-                        linear-gradient(135deg, var(--primary) 50%, transparent 50%);
+      background-image: linear-gradient(45deg, transparent 50%, var(--control-color) 50%),
+                        linear-gradient(135deg, var(--control-color) 50%, transparent 50%);
       background-position: calc(100% - 18px) calc(50% - 3px), calc(100% - 12px) calc(50% - 3px);
       background-size: 6px 6px, 6px 6px;
       background-repeat: no-repeat;
@@ -140,8 +178,8 @@
     .hero{
       margin-top: 28px;
       padding: 40px 36px;
-      border: 1px solid rgba(31,59,115,.08);
-      background: linear-gradient(135deg, rgba(255,255,255,.95), rgba(239,244,255,.85));
+      border: 1px solid var(--hero-border);
+      background: var(--hero-bg);
       border-radius: 28px;
       box-shadow: var(--shadow);
       position:relative;
@@ -151,8 +189,8 @@
       content:"";
       position:absolute; inset:-2px;
       background:
-        radial-gradient(520px 220px at 15% 20%, rgba(79,163,220,.20), transparent 60%),
-        radial-gradient(540px 240px at 85% 0%, rgba(31,59,115,.22), transparent 70%);
+        radial-gradient(520px 220px at 15% 20%, var(--hero-overlay1), transparent 60%),
+        radial-gradient(540px 240px at 85% 0%, var(--hero-overlay2), transparent 70%);
       pointer-events:none;
     }
     .hero-grid{
@@ -190,14 +228,14 @@
     .checklist li{
       display:flex; align-items:center; gap:10px;
       font-weight:600;
-      color: var(--primary);
+      color: var(--chip-color);
       font-size: 15px;
     }
     .checklist .check-icon{
       width:22px; height:22px; border-radius:8px;
       display:grid; place-items:center;
-      background: rgba(79,163,220,.15);
-      color: var(--primary);
+      background: var(--check-bg);
+      color: var(--check-color);
       font-size: 12px;
       flex-shrink:0;
     }
@@ -206,15 +244,15 @@
       display:inline-flex; align-items:center; justify-content:center; gap:10px;
       padding: 11px 14px;
       border-radius: 12px;
-      border: 1px solid rgba(31,59,115,.12);
-      background: rgba(255,255,255,.9);
-      color: var(--primary);
+      border: 1px solid var(--card-border);
+      background: var(--btn-bg);
+      color: var(--chip-color);
       font-weight: 650;
       font-size: 14px;
       text-decoration:none;
       transition: transform .08s ease, background .12s ease, box-shadow .12s ease;
     }
-    .btn:hover{ background: rgba(31,59,115,.08); text-decoration:none; transform: translateY(-1px); }
+    .btn:hover{ background: var(--btn-hover); text-decoration:none; transform: translateY(-1px); }
     .btn:focus{ outline:none; box-shadow: 0 0 0 4px var(--ring); }
     .btn.primary{
       border-color: transparent;
@@ -232,13 +270,13 @@
       gap: 14px;
     }
     .metric{
-      border:1px solid rgba(31,59,115,.08);
-      background: var(--panel);
+      border:1px solid var(--card-border);
+      background: var(--metric-bg);
       border-radius: 18px;
       padding: 20px 18px;
       box-shadow: 0 12px 30px rgba(15,23,42,.08);
     }
-    .metric b{ display:block; font-size: 15px; margin-bottom: 6px; color: var(--primary); }
+    .metric b{ display:block; font-size: 15px; margin-bottom: 6px; color: var(--chip-color); }
     .metric span{ color: var(--muted); font-size: 14px; }
 
     .section{
@@ -256,8 +294,8 @@
     @media (max-width: 900px){ .cards{ grid-template-columns: 1fr; } }
 
     .card{
-      border:1px solid rgba(31,59,115,.08);
-      background: var(--panel);
+      border:1px solid var(--card-border);
+      background: var(--card-bg);
       border-radius: 22px;
       padding: 18px;
       box-shadow: 0 12px 28px rgba(15,23,42,.08);
@@ -265,13 +303,13 @@
       flex-direction:column;
       gap:6px;
     }
-    .card h3{ margin: 0; font-size: 17px; color: var(--primary); }
+    .card h3{ margin: 0; font-size: 17px; color: var(--chip-color); }
     .card p{ margin: 0; color: var(--muted); font-size: 14px; }
     .icon{
       width: 44px; height: 44px;
       border-radius: 14px;
       display:grid; place-items:center;
-      border:1px solid rgba(31,59,115,.08);
+      border:1px solid var(--card-border);
       background: rgba(79,163,220,.12);
       margin-bottom: 12px;
       font-size: 20px;
@@ -286,8 +324,8 @@
     @media (max-width: 900px){ .split{ grid-template-columns: 1fr; } }
 
     .callout{
-      border:1px dashed rgba(79,163,220,.4);
-      background: rgba(79,163,220,.08);
+      border:1px dashed var(--callout-border);
+      background: var(--callout-bg);
       border-radius: 22px;
       padding: 18px 20px;
       color: var(--text);
