--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     .wrap{ max-width:1200px; margin:0 auto; padding: 24px 20px 80px; }
     .nav{
       display:flex; align-items:center; justify-content:space-between; gap:14px;
+      flex-wrap:wrap;
       padding: 14px 18px;
       border:1px solid var(--border);
       background: var(--glass);
@@ -291,7 +292,7 @@
       gap: 16px;
       margin-top: 20px;
     }
-    @media (max-width: 900px){ .cards{ grid-template-columns: 1fr; } }
+    @media (max-width: 900px){ .cards{ grid-template-columns: minmax(0, 1fr); } }
 
     .card{
       border:1px solid var(--card-border);
@@ -347,6 +348,33 @@
 
     /* Simple in-page anchor offset for sticky nav */
     .anchor{ scroll-margin-top: 84px; }
+
+    @media (max-width: 700px){
+      .wrap{ padding: 18px 16px 60px; }
+      .nav{ position: sticky; top: 10px; border-radius: 16px; padding: 16px; align-items:flex-start; }
+      .brand{ width:100%; justify-content:flex-start; }
+      .navlinks{ width:100%; overflow-x:auto; padding-bottom:4px; gap:8px; }
+      .navlinks::-webkit-scrollbar{ display:none; }
+      .nav-actions{ width:100%; flex-direction:column; align-items:stretch; gap:10px; }
+      .lang{ justify-content:space-between; }
+      select{ width:160px; }
+      .hero{ padding: 26px 22px; border-radius: 22px; }
+      .cta-row{ flex-direction:column; }
+      .btn{ width:100%; justify-content:center; }
+      .metrics{ grid-template-columns: 1fr; }
+      .cards{ grid-template-columns: 1fr; }
+      .split{ grid-template-columns: 1fr; }
+      .footer{ flex-direction:column; align-items:flex-start; gap:6px; }
+    }
+
+    @media (max-width: 480px){
+      h1{ font-size: 32px; }
+      .navlinks{ flex-wrap:nowrap; }
+      .navlinks .chip{ flex:0 0 auto; }
+      .logo{ width:42px; height:42px; }
+      .hero-grid{ gap: 20px; }
+      .checklist{ margin-top: 14px; }
+    }
   </style>
 </head>
 <body>
